# Em-Cubed

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COST_MANAGEMENT.md  DEPLOYMENT.md  Dockerfile  Fixing Errors.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Integrating Cangjie Into Em-Cubed.md  NEXT_PHASE_PLAN.md  NEXT_PHASE_SUMMARY.md  NEXT_STEPS_PLAN.md  PRODUCTION_READINESS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REMOTE_REGISTRY.md  REMOTE_REGISTRY_SUMMARY.md  SECURITY.md  TESTING_STRATEGY.md  TEST_PLAN_CANGJIE_COMPARISON.md  TROUBLESHOOTING.md  TYPE_SYSTEM.md  assessment.md  before_fix.txt  cangjie_comparison_report.md  docker-compose.yml  failures.txt  llm_advanced_workflow.json  mypy_final.txt  mypy_output.txt  mypy_output2.txt  mypy_output3.txt  phase2_test_results.txt  phase3_final_tests.txt  phase3_test_results.txt  pyproject.toml  (+9 more)
.context/: completion_log.md  status.md
.github/workflows/: ci.yml  lint.yml
.kilo/plans/: 1777394018288-lucky-lagoon.md
api/: __init__.py  main.py
core/: indexer.py  registry.py
dashboard/: package.json
dashboard/src/: App.js
docs/: CANGJIE_MIGRATION_GUIDELINES.md  LOOPY_SKILLS_AND_ONTOLOGY.md  MULTI_SURFACE.md  MULTI_SURFACE_GUIDE.md  SKILLS_QUALITY.md  SURFACE_MIGRATION.md  api-reference.md
examples/multi-surface-problem-solver/: SKILL.md
lsp/: README.md  language-configuration.json  package.json  requirements.txt  tsconfig.json
lsp/src/: extension.ts  skill_lsp.py
lsp/syntaxes/: skill.tmLanguage.json
scripts/: demo_framework.py
skills/: CANGJIE_COMPARISON.md  manifest.yaml
skills/CLINICAL_TRIALS/: SKILL.md
skills/EPIDEMIOLOGY/: SKILL.md
skills/FORENSIC_ECONOMICS/: SKILL.md
skills/MACHINE_LEARNING/: SKILL.md
skills/STATISTICS/: SKILL.md
skills/data-pipeline-orchestrator/: SKILL.md
skills/differential-evolution-solver/: SKILL.md
skills/ensemble-method-manager/: SKILL.md
skills/feature-engineering-pipeline/: SKILL.md
skills/intelligent_planner/: SKILL.md
skills/logic/: CANGJIE_ORCHESTRATION.md
skills/multi-surface-decision-tree/: SKILL.md
skills/pathfinding-with-constraints/: SKILL.md
skills/prolog_logic_solver/: SKILL.md
skills/reinforcement-learning-agent/: SKILL.md
skills/resource-allocation-planner/: SKILL.md
skills/system-dynamics-modeler/: SKILL.md
skills/time-series-forecaster/: SKILL.md
skills/uncertainty-quantifier/: SKILL.md
src/em_cubed/: __init__.py  cli.py  container_executor.py  container_surface.py  context.py  indexer.py  plugin.py  plugin_discovery.py  plugin_manager.py  plugin_registry.py  search.py
surfaces/: base.py  hy_adapter.py  prolog_adapter.py  python_runner.py
tests/: check_failures.py  conftest.py  debug_extract.py  debug_extract_meta.py  debug_get_metadata.py  debug_prolog_tags.py  debug_prolog_tags2.py  debug_regex.py  debug_registry.py  debug_test_gen.py  generate_skill_tests.py  run_tests_debug.py  smoke_quality.py  test_adaptive_retry_scaling.py  test_api.py  test_architectural_remediations.py  test_cangjie_surface.py  test_checkpoint.py  test_cli.py  test_clingo_surface.py  test_concurrent.py  test_container_surface.py  test_context.py  test_core.py  test_dag_parser.py  test_datalog_timeout.py  test_distributed_execution.py  test_executor.py  test_hybrid_coprocessor.py  test_indexer.py  test_integration.py  test_janus_surface.py  test_kanren_surface.py  test_llm_surface.py  test_llm_surface_enhanced.py  test_loopy_skill.py  test_ontology_validator.py  test_orchestration_logic.py  test_plugin_manager.py  test_plugin_manager_containerized.py  (+15 more)
tests/integration/: test_STATISTICS_autoregressive.py  test_STATISTICS_bootstrap.py  test_STATISTICS_descriptive.py  test_STATISTICS_guardrails.py  test_STATISTICS_inferential.py  test_STATISTICS_naive_bayes.py  test_STATISTICS_relational.py  test_STATISTICS_uncertainty.py  test_STOCHASTIC_PROCESSES_context_gate.py  test_STOCHASTIC_PROCESSES_ngram.py  test_STOCHASTIC_PROCESSES_pagerank_walk.py  test_STOCHASTIC_PROCESSES_stationarity.py  test_cangjie_bridge.py  test_clingo_benchmarks.py  test_distributed_stress.py  test_logic_benchmarks.py
tests/skills/: test_ANALYTICS_bayesian-evidence-updater.py  test_ANALYTICS_statistical-test-advisor.py  test_AUTOMATION_github-pr-manager.py  test_AUTOMATION_workflow-synthesiser.py  test_CLINICAL_TRIALS_ae-severity-tree-evaluator.py  test_CLINICAL_TRIALS_dmc-counting-rule-analyzer.py  test_CLINICAL_TRIALS_icf-clause-validator.py  test_CLINICAL_TRIALS_non-inferiority-margin-checker.py  test_CLINICAL_TRIALS_sae-reporting-threshold-tester.py  test_CLINICAL_TRIALS_sap-endpoint-consistency-checker.py  test_DATA_PROCESSING_data-pipeline-orchestrator.py  test_DECISION_MAKING_multi-criteria-weight-calculator.py  test_DECISION_MAKING_multi-surface-decision-tree.py  test_DISTRIBUTED_SYSTEMS_multi-agent-coordinator.py  test_ENSEMBLE_ensemble-method-manager.py  test_GRAPH_ML_graph-neural-network.py  (+44 more)
workflow-designer/: index.html
(+253 files in other folders)
