[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em-cubed"
version = "0.2.0"
description = "Multi-Surface Skill Framework for Python, Prolog, and Hy execution surfaces"
authors = [
    {name = "SpectreDeath", email = "spectre@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "asteval>=0.9.0",   # Safe Python evaluation
    "whoosh>=2.7.4,<3.0.0",  # Full-text search

    "fastapi>=0.104.0,<1.0.0",  # API serving
    "uvicorn[standard]>=0.24.0,<0.30.0",
    "pydantic>=2.0.0,<3.0.0",

    "structlog>=23.0.0,<25.0.0",  # Logging
]

[project.scripts]
em3 = "em_cubed.cli:main"

[project.optional-dependencies]
surfaces = [
    "pyswip>=0.3.0",  # Prolog integration
    "hy>=0.28.0",       # Hy Lisp integration
    "z3-solver>=4.12.2.0",  # Z3 SMT solver
    "pyDatalog>=0.18.0",    # Datalog for relational queries
]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=em_cubed --cov-report=term-missing -W ignore"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
